# HybridRAG-Forge

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py  requirements.txt
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/bronze/: sources.yml
dbt/models/silver/: silver_repo.sql  silver_repo.yml  sources.yml
dbt/tests/: assert_unique_repo_dependency.sql
docs/adr/: 0001-konzept-und-architekturentscheidungen.md
extractors/: github_graphql.py  opendigger.py
extractors/config/: target_repos.yaml
loaders/postgres/: load_bronze.py  load_silver.py
scripts/: init_bronze_schema.sql  init_silver_schema.sql  run_bronze_extraction.py
tests/integration/: test_bronze_load.py  test_silver_load.py
tests/unit/: test_dependency_parser.py  test_github_graphql.py  test_load_bronze.py  test_load_silver.py  test_opendigger.py  test_placeholder.py
transformers/: dependency_parser.py
