[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybridrag-forge"
version = "0.1.0"
description = "End-to-End Data Platform for AI/Data Tooling Ecosystem Intelligence"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=2.9",
    "dbt-postgres>=1.8",
    "psycopg2-binary>=2.9",
    "neo4j>=5.20",
    "qdrant-client>=1.9",
    "streamlit>=1.35",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "tenacity>=8.3",
    "openai>=1.30",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "testcontainers[postgres]>=4.0",
]

[tool.setuptools.packages.find]
include = ["extractors*", "enrichment*", "loaders*", "dashboard*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line-length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["extractors", "enrichment", "loaders", "dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
